@@ -1,3 +1,12 @@
+2019-12-30  Enrico Schumann  <es@enricoschumann.net>
+
+        * R/functions.R (HTMLdecode): also decode
+        decimal and hexadecimal character references,
+        controlled by new arguments 'named', 'hex' and
+        'decimal'
+        (HTMLencode): new argument 'encode.only', to
+        restrict characters to be encoded
+
 2019-11-13  Enrico Schumann  <es@enricoschumann.net>
 
         * R/functions.R (here): fixed -- argument
